DTSCCI-4142: Update test assertions for clarity and replace list indexing with `getFirst()` for improved readability